@@ -19,6 +19,12 @@
  */
 package mServer.crawler.sender;
 
+import java.net.URL;
+import java.text.SimpleDateFormat;
+import java.util.ArrayList;
+import java.util.Date;
+import java.util.Iterator;
+
 import de.mediathekview.mlib.Config;
 import de.mediathekview.mlib.Const;
 import de.mediathekview.mlib.daten.Film;
@@ -30,13 +36,8 @@ import mServer.crawler.CrawlerTool;
 import mServer.crawler.FilmeSuchen;
 import mServer.crawler.GetUrl;
 
-import java.net.URI;
-import java.text.SimpleDateFormat;
-import java.util.ArrayList;
-import java.util.Date;
-import java.util.Iterator;
-
-public class MediathekHr extends MediathekReader {
+public class MediathekHr extends MediathekReader
+{
 
     public final static Sender SENDER = Sender.HR;
     private MSStringBuilder seite = new MSStringBuilder(Const.STRING_BUFFER_START_BUFFER);
@@ -47,7 +48,8 @@ public class MediathekHr extends MediathekReader {
      * @param ssearch
      * @param startPrio
      */
-    public MediathekHr(FilmeSuchen ssearch, int startPrio) {
+    public MediathekHr(final FilmeSuchen ssearch, final int startPrio)
+    {
         super(ssearch, SENDER.getName(), /* threads */ 2, /* urlWarten */ 200, startPrio);
     }
 
@@ -55,213 +57,271 @@ public class MediathekHr extends MediathekReader {
      *
      */
     @Override
-    public void addToList() {
+    public void addToList()
+    {
         meldungStart();
-        GetUrl getUrlIo = new GetUrl(getWartenSeiteLaden());
-        seite = getUrlIo.getUri_Utf(SENDER.getName(), "http://www.hr-online.de/website/fernsehen/sendungen/index.jsp", seite, "");
+        final GetUrl getUrlIo = new GetUrl(getWartenSeiteLaden());
+        seite = getUrlIo.getUri_Utf(SENDER.getName(), "http://www.hr-online.de/website/fernsehen/sendungen/index.jsp",
+                seite, "");
 
-        //TH 7.8.2012 Erst suchen nach Rubrik-URLs, die haben Thema
+        // TH 7.8.2012 Erst suchen nach Rubrik-URLs, die haben Thema
         bearbeiteRubrik(seite);
         bearbeiteTage(seite);
 
-        if (Config.getStop()) {
+        if (Config.getStop())
+        {
             meldungThreadUndFertig();
-        } else if (listeThemen.isEmpty()) {
+        }
+        else if (listeThemen.isEmpty())
+        {
             meldungThreadUndFertig();
-        } else {
+        }
+        else
+        {
             meldungAddMax(listeThemen.size());
-            for (int t = 0; t < getMaxThreadLaufen(); ++t) {
-                Thread th = new ThemaLaden();
+            for (int t = 0; t < getMaxThreadLaufen(); ++t)
+            {
+                final Thread th = new ThemaLaden();
                 th.setName(SENDER.getName() + t);
                 th.start();
             }
         }
     }
 
-    private void bearbeiteTage(MSStringBuilder seite) {
+    private void bearbeiteTage(final MSStringBuilder seite)
+    {
         // loadPlayItems('http://www.hr-online.de/website/includes/medianew-playlist.xml.jsp?logic=start_multimedia_document_logic_39004789&xsl=media2html5.xsl');
 
-        final String TAGE_PREFIX = "http://www.hr-online.de/website/includes/medianew-playlist.xml.jsp?logic=start_multimedia_document_logic_";
-        final String TAGE_MUSTER = "http://www.hr-online.de/website/includes/medianew-playlist.xml.jsp?logic=start_multimedia_document_logic_";
-        ArrayList<String> erg = new ArrayList<>();
+        final String TAGE_PREFIX =
+                "http://www.hr-online.de/website/includes/medianew-playlist.xml.jsp?logic=start_multimedia_document_logic_";
+        final String TAGE_MUSTER =
+                "http://www.hr-online.de/website/includes/medianew-playlist.xml.jsp?logic=start_multimedia_document_logic_";
+        final ArrayList<String> erg = new ArrayList<>();
         seite.extractList("", "", TAGE_MUSTER, "&", TAGE_PREFIX, erg);
-        for (String url : erg) {
-            String[] add = new String[]{url, ""/*thema*/, "http://www.hr-online.de/website/fernsehen/sendungen/index.jsp"/*filmsite*/};
-            if (!istInListe(listeThemen, url, 0)) {
+        for (final String url : erg)
+        {
+            final String[] add = new String[]
+            { url, ""/* thema */, "http://www.hr-online.de/website/fernsehen/sendungen/index.jsp"/*
+                                                                                                  * filmsite
+                                                                                                  */ };
+            if (!istInListe(listeThemen, url, 0))
+            {
                 listeThemen.add(add);
             }
         }
     }
 
-    //TH 7.8.2012 Suchen in Seite von Rubrik-URL
-    // z.B. http://www.hr-online.de/website/fernsehen/sendungen/index.jsp?rubrik=2254
-    private void bearbeiteRubrik(MSStringBuilder seite) {
+    // TH 7.8.2012 Suchen in Seite von Rubrik-URL
+    // z.B.
+    // http://www.hr-online.de/website/fernsehen/sendungen/index.jsp?rubrik=2254
+    private void bearbeiteRubrik(final MSStringBuilder seite)
+    {
         final String RUBRIK_PREFIX = "http://www.hr-online.de/website/fernsehen/sendungen/index.jsp?rubrik=";
         final String RUBRIK_MUSTER = "<option value=\"/website/fernsehen/sendungen/index.jsp?rubrik=";
-        ArrayList<String> erg = new ArrayList<>();
+        final ArrayList<String> erg = new ArrayList<>();
         seite.extractList("", "", RUBRIK_MUSTER, "\"", RUBRIK_PREFIX, erg);
-        for (String s : erg) {
-            if (Config.getStop()) {
+        for (final String s : erg)
+        {
+            if (Config.getStop())
+            {
                 break;
             }
             rubrik(s);
         }
     }
 
-    private void rubrik(String rubrikUrl) {
+    private void rubrik(final String rubrikUrl)
+    {
         final String MUSTER = "/website/includes/medianew-playlist.xml.jsp?logic=start_multimedia_document_logic_";
         final String MUSTER_TITEL = "<meta property=\"og:title\" content=\"";
 
-        GetUrl getUrlIo = new GetUrl(getWartenSeiteLaden());
+        final GetUrl getUrlIo = new GetUrl(getWartenSeiteLaden());
         rubrikSeite = getUrlIo.getUri_Iso(SENDER.getName(), rubrikUrl, rubrikSeite, "");
         String url, thema;
 
         // 1. Titel (= Thema) holen
-        thema = rubrikSeite.extract(MUSTER_TITEL, "\""); // <meta property="og:title" content="Alle Wetter | Fernsehen | hr-online.de"/>
-        if (thema.contains("|")) {
+        thema = rubrikSeite.extract(MUSTER_TITEL, "\""); // <meta
+                                                         // property="og:title"
+                                                         // content="Alle Wetter
+                                                         // | Fernsehen |
+                                                         // hr-online.de"/>
+        if (thema.contains("|"))
+        {
             thema = thema.substring(0, thema.indexOf('|')).trim();
         }
 
-        // 2. suchen nach XML Liste       
+        // 2. suchen nach XML Liste
         url = rubrikSeite.extract(MUSTER, "&");
-        if (!url.isEmpty()) {
-            url = "http://www.hr-online.de/website/includes/medianew-playlist.xml.jsp?logic=start_multimedia_document_logic_" + url;
-            String[] add = new String[]{url, thema, rubrikUrl};
-            if (!istInListe(listeThemen, url, 0)) {
+        if (!url.isEmpty())
+        {
+            url = "http://www.hr-online.de/website/includes/medianew-playlist.xml.jsp?logic=start_multimedia_document_logic_"
+                    + url;
+            final String[] add = new String[]
+            { url, thema, rubrikUrl };
+            if (!istInListe(listeThemen, url, 0))
+            {
                 listeThemen.add(add);
             }
-        } else {
+        }
+        else
+        {
             Log.errorLog(653210697, "keine URL");
         }
     }
 
-    private class ThemaLaden extends Thread {
+    private class ThemaLaden extends Thread
+    {
 
         private final GetUrl getUrl = new GetUrl(getWartenSeiteLaden());
         private MSStringBuilder seite1 = new MSStringBuilder(Const.STRING_BUFFER_START_BUFFER);
-        //private MVStringBuilder seite2 = new MVStringBuilder();
+        // private MVStringBuilder seite2 = new MVStringBuilder();
 
         @Override
-        public void run() {
-            try {
+        public void run()
+        {
+            try
+            {
                 meldungAddThread();
                 final Iterator<String[]> themaIterator = listeThemen.iterator();
                 while (!Config.getStop() && themaIterator.hasNext())
                 {
                     final String[] thema = themaIterator.next();
-                    meldungProgress(thema[0] /*url*/);
+                    meldungProgress(thema[0] /* url */);
                     seite.setLength(0);
-                    addFilme(thema[0]/*url*/, thema[1]/*thema*/, thema[2]/*filmsite*/);
+                    addFilme(thema[0]/* url */, thema[1]/* thema */,
+                            thema[2]/* filmsite */);
                 }
-            } catch (Exception ex) {
+            }
+            catch (final Exception ex)
+            {
                 Log.errorLog(894330854, ex);
             }
             meldungThreadUndFertig();
         }
 
-        private void addFilme(String xmlWebsite, String thema_, String filmSite) {
+        private void addFilme(final String xmlWebsite, final String thema_, final String filmSite)
+        {
             final String MUSTER_ITEM_1 = "<videos>";
 
-            final String MUSTER_TITEL = "<title>"; //<title>Sonnenziel Valencia</title>
-            final String MUSTER_URL = "<url type=\"mp4\">"; // <url type="mp4">http://www.hr.gl-systemhaus.de/video/fs/servicereisen/2014_11/141114214510_service_re_44765.mp4</url>
+            final String MUSTER_TITEL = "<title>"; // <title>Sonnenziel
+                                                   // Valencia</title>
+            final String MUSTER_URL = "<url type=\"mp4\">"; // <url
+                                                            // type="mp4">http://www.hr.gl-systemhaus.de/video/fs/servicereisen/2014_11/141114214510_service_re_44765.mp4</url>
             final String MUSTER_URL_LOW = "<url type=\"mp4-small\">";
-            final String MUSTER_DATUM = "<date>"; //<date>14.11.2014 18:50</date>
-            final String MUSTER_THEMA = "<author>"; //<author>service: reisen</author>
+            final String MUSTER_DATUM = "<date>"; // <date>14.11.2014
+                                                  // 18:50</date>
+            final String MUSTER_THEMA = "<author>"; // <author>service:
+                                                    // reisen</author>
 
             final String MUSTER_DURATION = "<duration>"; // <duration>00:43:32</duration>
             final String MUSTER_DESCRIPTION = "<description>";
             final String END = "</";
             meldung(xmlWebsite);
             seite1 = getUrl.getUri_Iso(SENDER.getName(), xmlWebsite, seite1, "");
-            try {
+            try
+            {
                 int posItem1 = 0;
                 String url = "", url_low;
                 String datum, zeit = "";
                 String titel, thema;
                 long duration = 0;
                 String description;
-                while (!Config.getStop() && (posItem1 = seite1.indexOf(MUSTER_ITEM_1, posItem1)) != -1) {
+                while (!Config.getStop() && (posItem1 = seite1.indexOf(MUSTER_ITEM_1, posItem1)) != -1)
+                {
                     posItem1 += MUSTER_ITEM_1.length();
 
-                    String d = seite1.extract(MUSTER_DURATION, END, posItem1);
-                    try {
-                        if (!d.isEmpty()) {
+                    final String d = seite1.extract(MUSTER_DURATION, END, posItem1);
+                    try
+                    {
+                        if (!d.isEmpty())
+                        {
                             duration = 0;
-                            String[] parts = d.split(":");
+                            final String[] parts = d.split(":");
                             long power = 1;
-                            for (int i = parts.length - 1; i >= 0; i--) {
+                            for (int i = parts.length - 1; i >= 0; i--)
+                            {
                                 duration += Long.parseLong(parts[i]) * power;
                                 power *= 60;
                             }
                         }
-                    } catch (Exception ex) {
+                    }
+                    catch (final Exception ex)
+                    {
                         Log.errorLog(708096931, "d: " + d);
                     }
                     description = seite1.extract(MUSTER_DESCRIPTION, END, posItem1);
                     datum = seite1.extract(MUSTER_DATUM, END, posItem1);
-                    if (datum.contains(" ")) {
+                    if (datum.contains(" "))
+                    {
                         zeit = datum.substring(datum.indexOf(' ')).trim() + ":00";
                         datum = datum.substring(0, datum.indexOf(' '));
                     }
                     titel = seite1.extract(MUSTER_TITEL, END, posItem1);
 
                     thema = seite1.extract(MUSTER_THEMA, END, posItem1);
-                    if (thema.isEmpty()) {
+                    if (thema.isEmpty())
+                    {
                         thema = thema_;
                     }
-                    if (thema.isEmpty()) {
+                    if (thema.isEmpty())
+                    {
                         thema = titel;
                     }
                     url = seite1.extract(MUSTER_URL, END, posItem1);
                     url_low = seite1.extract(MUSTER_URL_LOW, END, posItem1);
-                    if (url.equals(url_low)) {
+                    if (url.equals(url_low))
+                    {
                         url_low = "";
                     }
-                    if (!url.isEmpty()) {
-                        if (datum.isEmpty()) {
+                    if (!url.isEmpty())
+                    {
+                        if (datum.isEmpty())
+                        {
                             datum = getDate(url);
                         }
-                        Film film = CrawlerTool.createFilm(SENDER,
-                                url,
-                                titel,
-                                thema,
-                                datum,
-                                zeit,
-                                duration,
-                                filmSite,
-                                description,
-                                "",
-                                url_low);
-                        String subtitle = url.replace(".mp4", ".xml");
-                        if (urlExists(subtitle)) {
-                            film.addSubtitle(new URI(subtitle));
+                        final Film film = CrawlerTool.createFilm(SENDER, url, titel, thema, datum, zeit, duration,
+                                filmSite, description, "", url_low);
+                        final String subtitle = url.replace(".mp4", ".xml");
+                        if (urlExists(subtitle))
+                        {
+                            film.addSubtitle(new URL(subtitle));
                         }
                         addFilm(film);
-                    } else {
+                    }
+                    else
+                    {
                         Log.errorLog(649882036, "keine URL");
                     }
                 }
-                if (url.isEmpty()) {
+                if (url.isEmpty())
+                {
                     Log.errorLog(761236458, "keine URL für: " + xmlWebsite);
                 }
-            } catch (Exception ex) {
+            }
+            catch (final Exception ex)
+            {
                 Log.errorLog(487774126, ex);
             }
         }
 
-        private String getDate(String url) {
+        private String getDate(final String url)
+        {
             String ret = "";
-            try {
+            try
+            {
                 String tmp = Functions.getDateiName(url);
-                if (tmp.length() > 8) {
+                if (tmp.length() > 8)
+                {
                     tmp = tmp.substring(0, 8);
-                    SimpleDateFormat sdfIn = new SimpleDateFormat("yyyyMMdd");
-                    Date filmDate = sdfIn.parse(tmp);
+                    final SimpleDateFormat sdfIn = new SimpleDateFormat("yyyyMMdd");
+                    final Date filmDate = sdfIn.parse(tmp);
                     SimpleDateFormat sdfOut;
                     sdfOut = new SimpleDateFormat("dd.MM.yyyy");
                     ret = sdfOut.format(filmDate);
                 }
-            } catch (Exception ex) {
+            }
+            catch (final Exception ex)
+            {
                 ret = "";
                 Log.errorLog(356408790, "kein Datum");
             }
