@@ -20,6 +20,18 @@
  */
 package mServer.crawler.sender;
 
+import java.net.MalformedURLException;
+import java.net.URL;
+import java.nio.charset.StandardCharsets;
+import java.util.ArrayList;
+import java.util.Date;
+import java.util.Iterator;
+
+import org.apache.commons.lang3.StringEscapeUtils;
+import org.apache.commons.lang3.time.FastDateFormat;
+import org.apache.logging.log4j.LogManager;
+import org.apache.logging.log4j.Logger;
+
 import de.mediathekview.mlib.Config;
 import de.mediathekview.mlib.Const;
 import de.mediathekview.mlib.daten.Film;
@@ -29,17 +41,6 @@ import de.mediathekview.mlib.tool.MSStringBuilder;
 import mServer.crawler.CrawlerTool;
 import mServer.crawler.FilmeSuchen;
 import mServer.crawler.GetUrl;
-import org.apache.commons.lang3.StringEscapeUtils;
-import org.apache.commons.lang3.time.FastDateFormat;
-import org.apache.logging.log4j.LogManager;
-import org.apache.logging.log4j.Logger;
-
-import java.net.URI;
-import java.net.URISyntaxException;
-import java.nio.charset.StandardCharsets;
-import java.util.ArrayList;
-import java.util.Date;
-import java.util.Iterator;
 
 public class MediathekOrf extends MediathekReader
 {
@@ -52,7 +53,7 @@ public class MediathekOrf extends MediathekReader
      * @param ssearch
      * @param startPrio
      */
-    public MediathekOrf(FilmeSuchen ssearch, int startPrio)
+    public MediathekOrf(final FilmeSuchen ssearch, final int startPrio)
     {
         super(ssearch, SENDER.getName(), /* threads */ 2, /* urlWarten */ 100, startPrio);
     }
@@ -60,7 +61,7 @@ public class MediathekOrf extends MediathekReader
     @Override
     protected void addToList()
     {
-        MSStringBuilder seite = new MSStringBuilder(Const.STRING_BUFFER_START_BUFFER);
+        final MSStringBuilder seite = new MSStringBuilder(Const.STRING_BUFFER_START_BUFFER);
         listeThemen.clear();
         meldungStart();
         if (CrawlerTool.loadLongMax())
@@ -68,41 +69,46 @@ public class MediathekOrf extends MediathekReader
             bearbeiteAdresseSendung(seite);
         }
         listeSort(listeThemen, 1);
-        int maxTage = CrawlerTool.loadLongMax() ? 9 : 2;
+        final int maxTage = CrawlerTool.loadLongMax() ? 9 : 2;
         for (int i = 0; i < maxTage; ++i)
         {
-            String vorTagen = getGestern(i).toLowerCase();
+            final String vorTagen = getGestern(i).toLowerCase();
             bearbeiteAdresseTag("http://tvthek.orf.at/schedule/" + vorTagen, seite);
         }
         if (Config.getStop())
         {
             meldungThreadUndFertig();
-        } else if (listeThemen.isEmpty())
+        }
+        else if (listeThemen.isEmpty())
         {
             meldungThreadUndFertig();
-        } else
+        }
+        else
         {
             meldungAddMax(listeThemen.size());
             for (int t = 0; t < getMaxThreadLaufen(); ++t)
             {
-                //new Thread(new ThemaLaden()).start();
-                Thread th = new ThemaLaden();
+                // new Thread(new ThemaLaden()).start();
+                final Thread th = new ThemaLaden();
                 th.setName(SENDER.getName() + t);
                 th.start();
             }
         }
     }
 
-    private void bearbeiteAdresseTag(String adresse, MSStringBuilder seite)
+    private void bearbeiteAdresseTag(final String adresse, MSStringBuilder seite)
     {
-        // <a href="http://tvthek.orf.at/program/Kultur-heute/3078759/Kultur-Heute/7152535" class="item_inner clearfix">
-        GetUrl getUrl = new GetUrl(100);
+        // <a
+        // href="http://tvthek.orf.at/program/Kultur-heute/3078759/Kultur-Heute/7152535"
+        // class="item_inner clearfix">
+        final GetUrl getUrl = new GetUrl(100);
         seite = getUrl.getUri(SENDER.getName(), adresse, StandardCharsets.UTF_8, 2, seite, "");
-        ArrayList<String> al = new ArrayList<>();
+        final ArrayList<String> al = new ArrayList<>();
         seite.extractList("", "", "<a href=\"http://tvthek.orf.at/profile/", "\"", "http://tvthek.orf.at/profile/", al);
-        for (String s : al)
+        for (final String s : al)
         {
-            String[] add = new String[]{s, THEMA_TAG}; // werden extra behandelt
+            final String[] add = new String[]
+            { s, THEMA_TAG }; // werden extra behandelt
             if (!istInListe(listeThemen, add[0], 0))
             {
                 listeThemen.add(add);
@@ -113,21 +119,23 @@ public class MediathekOrf extends MediathekReader
     private void bearbeiteAdresseSendung(MSStringBuilder seite)
     {
         final String URL = "http://tvthek.orf.at/profiles";
-        GetUrl getUrl = new GetUrl(100);
+        final GetUrl getUrl = new GetUrl(100);
         seite = getUrl.getUri(SENDER.getName(), URL, StandardCharsets.UTF_8, 3, seite, "");
-        ArrayList<String> al = new ArrayList<>();
+        final ArrayList<String> al = new ArrayList<>();
         try
         {
             seite.extractList("", "", "<a href=\"/profiles/letter/", "\"", "http://tvthek.orf.at/profiles/letter/", al);
-            for (String s : al)
+            for (final String s : al)
             {
-                String[] add = new String[]{s, THEMA_SENDUNGEN};
+                final String[] add = new String[]
+                { s, THEMA_SENDUNGEN };
                 if (!istInListe(listeThemen, add[0], 0))
                 {
                     listeThemen.add(add);
                 }
             }
-        } catch (Exception ex)
+        }
+        catch (final Exception ex)
         {
             Log.errorLog(826341789, ex);
         }
@@ -140,7 +148,7 @@ public class MediathekOrf extends MediathekReader
         private MSStringBuilder seite1 = new MSStringBuilder(Const.STRING_BUFFER_START_BUFFER);
         private MSStringBuilder seite2 = new MSStringBuilder(Const.STRING_BUFFER_START_BUFFER);
         private final ArrayList<String> alSendung = new ArrayList<>();
-        //private final ArrayList<String> alThemen = new ArrayList<>();
+        // private final ArrayList<String> alThemen = new ArrayList<>();
         private final ArrayList<String> urlList = new ArrayList<>();
 
         @Override
@@ -158,37 +166,41 @@ public class MediathekOrf extends MediathekReader
                         meldungProgress(thema[0]);
                         switch (thema[1])
                         {
-                            case THEMA_TAG:
-                                // dann ist von "Tage zurück"
-                                feedEinerSeiteSuchen(thema[0], true /*nurUrlPruefen*/);
-                                break;
-                            case THEMA_SENDUNGEN:
-                                sendungen(thema[0]);
-                                break;
-                            //                            default:
-                            //                                themen(link[0] /* url */);
-                            //                                break;
+                        case THEMA_TAG:
+                            // dann ist von "Tage zurück"
+                            feedEinerSeiteSuchen(thema[0],
+                                    true /* nurUrlPruefen */);
+                            break;
+                        case THEMA_SENDUNGEN:
+                            sendungen(thema[0]);
+                            break;
+                        // default:
+                        // themen(link[0] /* url */);
+                        // break;
                         }
-                    } catch (Exception ex)
+                    }
+                    catch (final Exception ex)
                     {
                         Log.errorLog(795633581, ex);
                     }
                 }
-            } catch (Exception ex)
+            }
+            catch (final Exception ex)
             {
                 Log.errorLog(554012398, ex);
             }
             meldungThreadUndFertig();
         }
 
-        private void sendungen(String url)
+        private void sendungen(final String url)
         {
-            GetUrl getUrl = new GetUrl(100);
+            final GetUrl getUrl = new GetUrl(100);
             seite1 = getUrl.getUri(SENDER.getName(), url, StandardCharsets.UTF_8, 2, seite1, "");
             alSendung.clear();
-            //int start = "http://tvthek.orf.at/profile/".length();
-            seite1.extractList("", "", "<a href=\"http://tvthek.orf.at/profile/", "\"", "http://tvthek.orf.at/profile/", alSendung);
-            for (String s : alSendung)
+            // int start = "http://tvthek.orf.at/profile/".length();
+            seite1.extractList("", "", "<a href=\"http://tvthek.orf.at/profile/", "\"", "http://tvthek.orf.at/profile/",
+                    alSendung);
+            for (final String s : alSendung)
             {
                 try
                 {
@@ -200,29 +212,33 @@ public class MediathekOrf extends MediathekReader
                     {
                         break; // vorerst mal weglassen, sind zu viele
                     }
-                    feedEinerSeiteSuchen(s, false /*nurUrlPruefen*/);
-                } catch (Exception ex)
+                    feedEinerSeiteSuchen(s, false /* nurUrlPruefen */);
+                }
+                catch (final Exception ex)
                 {
                     Log.errorLog(702095478, ex);
                 }
             }
         }
 
-        private void feedEinerSeiteSuchen(String strUrlFeed, boolean nurUrlPruefen)
+        private void feedEinerSeiteSuchen(final String strUrlFeed, final boolean nurUrlPruefen)
         {
-            //<title> ORF TVthek: a.viso - 28.11.2010 09:05 Uhr</title>
+            // <title> ORF TVthek: a.viso - 28.11.2010 09:05 Uhr</title>
             seite2 = getUrl.getUri_Utf(SENDER.getName(), strUrlFeed, seite2, "");
             String datum;
             String zeit;
             long duration = 0;
             String description;
             String tmp;
-            String urlRtmpKlein = "", urlRtmp = "", url, urlKlein, urlHD;
+            final String urlRtmpKlein = "", urlRtmp = "";
+            String url, urlKlein, urlHD;
             String titel, thema;
             String subtitle;
             int posStart, posStopAlles, posStopEpisode, pos = 0;
             meldung(strUrlFeed);
-            thema = seite2.extract("<title>", "vom"); //<title>ABC Bär vom 17.11.2013 um 07.35 Uhr / ORF TVthek</title>
+            thema = seite2.extract("<title>", "vom"); // <title>ABC Bär vom
+                                                      // 17.11.2013 um 07.35 Uhr
+                                                      // / ORF TVthek</title>
 
             datum = seite2.extract("<span class=\"meta meta_date\">", "<");
             if (datum.contains(","))
@@ -257,7 +273,8 @@ public class MediathekOrf extends MediathekReader
                     {
                         titel = StringEscapeUtils.unescapeJava(titel).trim();
                     }
-                } else
+                }
+                else
                 {
                     posStopEpisode = seite2.indexOf("</footer>", pos);
                     if (posStopEpisode == -1 || posStopEpisode > posStopAlles)
@@ -279,8 +296,10 @@ public class MediathekOrf extends MediathekReader
                 tmp = seite2.extract("&quot;duration&quot;:", ",", pos, posStopEpisode);
                 try
                 {
-                    duration = Long.parseLong(tmp) / 1000; // time in milliseconds
-                } catch (Exception ignored)
+                    duration = Long.parseLong(tmp) / 1000; // time in
+                                                           // milliseconds
+                }
+                catch (final Exception ignored)
                 {
                 }
 
@@ -295,7 +314,8 @@ public class MediathekOrf extends MediathekReader
                 description = seite2.extract("<div class=\"details\">", "</div>", pos, posStopEpisode).trim();
                 if (description.isEmpty())
                 {
-                    description = seite2.extract("<div class=\"details_description\">", "</div>", pos, posStopEpisode).trim();
+                    description =
+                            seite2.extract("<div class=\"details_description\">", "</div>", pos, posStopEpisode).trim();
                 }
                 if (description.isEmpty())
                 {
@@ -312,15 +332,18 @@ public class MediathekOrf extends MediathekReader
                 url = "";
                 urlHD = "";
                 urlKlein = "";
-                final String MUSTER_URL = "{&quot;quality&quot;:&quot;Q6A&quot;,&quot;quality_string&quot;:&quot;hoch&quot;,&quot;src&quot;:&quot;http";
-                final String MUSTER_URL_HD = "quality&quot;:&quot;Q8C&quot;,&quot;quality_string&quot;:&quot;sehr hoch (HD)&quot;,&quot;src&quot;:&quot;http";
-                final String MUSTER_URL_KLEIN = "quality&quot;:&quot;Q4A&quot;,&quot;quality_string&quot;:&quot;mittel&quot;,&quot;src&quot;:&quot;http";
+                final String MUSTER_URL =
+                        "{&quot;quality&quot;:&quot;Q6A&quot;,&quot;quality_string&quot;:&quot;hoch&quot;,&quot;src&quot;:&quot;http";
+                final String MUSTER_URL_HD =
+                        "quality&quot;:&quot;Q8C&quot;,&quot;quality_string&quot;:&quot;sehr hoch (HD)&quot;,&quot;src&quot;:&quot;http";
+                final String MUSTER_URL_KLEIN =
+                        "quality&quot;:&quot;Q4A&quot;,&quot;quality_string&quot;:&quot;mittel&quot;,&quot;src&quot;:&quot;http";
 
                 // =======================================================
                 // url
                 urlList.clear();
                 seite2.extractList(pos, posStopEpisode, MUSTER_URL, "", "&quot;", "http", urlList);
-                for (String u : urlList)
+                for (final String u : urlList)
                 {
                     if (u.endsWith(".mp4"))
                     {
@@ -332,7 +355,7 @@ public class MediathekOrf extends MediathekReader
                 // urlHD
                 urlList.clear();
                 seite2.extractList(pos, posStopEpisode, MUSTER_URL_HD, "", "&quot;", "http", urlList);
-                for (String u : urlList)
+                for (final String u : urlList)
                 {
                     if (u.endsWith(".mp4"))
                     {
@@ -344,7 +367,7 @@ public class MediathekOrf extends MediathekReader
                 // urlKlein
                 urlList.clear();
                 seite2.extractList(pos, posStopEpisode, MUSTER_URL_KLEIN, "", "&quot;", "http", urlList);
-                for (String u : urlList)
+                for (final String u : urlList)
                 {
                     if (u.endsWith(".mp4"))
                     {
@@ -365,27 +388,21 @@ public class MediathekOrf extends MediathekReader
                     }
                     try
                     {
-                        Film film = CrawlerTool.createFilm(SENDER,
-                                url,
-                                titel,
-                                thema,
-                                datum,
-                                zeit,
-                                duration,
-                                strUrlFeed,
-                                description,
-                                urlHD,
-                                urlKlein);
+                        final Film film = CrawlerTool.createFilm(SENDER, url, titel, thema, datum, zeit, duration,
+                                strUrlFeed, description, urlHD, urlKlein);
                         if (!subtitle.isEmpty())
                         {
-                            film.addSubtitle(new URI(subtitle));
+                            film.addSubtitle(new URL(subtitle));
                         }
                         addFilm(film, nurUrlPruefen);
-                    } catch (URISyntaxException uriSyntaxEception)
-                    {
-                        LOG.error(String.format("Der Film \"%s - %s\" konnte nicht umgewandelt werden.", thema, titel), uriSyntaxEception);
                     }
-                } else
+                    catch (final MalformedURLException malformedURLException)
+                    {
+                        LOG.error(String.format("Der Film \"%s - %s\" konnte nicht umgewandelt werden.", thema, titel),
+                                malformedURLException);
+                    }
+                }
+                else
                 {
                     Log.errorLog(989532147, "keine Url: " + strUrlFeed);
                 }
@@ -393,14 +410,16 @@ public class MediathekOrf extends MediathekReader
         }
     }
 
-    private String getGestern(int tage)
+    private String getGestern(final int tage)
     {
         try
         {
-            //SimpleDateFormat sdfOut = new SimpleDateFormat("EEEE", Locale.US);
-            FastDateFormat sdfOut = FastDateFormat.getInstance("dd.MM.yyyy");
-            return sdfOut.format(new Date(new Date().getTime() - tage * (1000 * 60 * 60 * 24)));
-        } catch (Exception ex)
+            // SimpleDateFormat sdfOut = new SimpleDateFormat("EEEE",
+            // Locale.US);
+            final FastDateFormat sdfOut = FastDateFormat.getInstance("dd.MM.yyyy");
+            return sdfOut.format(new Date(new Date().getTime() - tage * 1000 * 60 * 60 * 24));
+        }
+        catch (final Exception ex)
         {
             return "";
         }
