@@ -2,7 +2,7 @@
  *    MediathekView
  *    Copyright (C) 2008 - 2012     W. Xaver
  *                              &   thausherr
- * 
+ *
  *    W.Xaver[at]googlemail.com
  *    http://zdfmediathk.sourceforge.net/
  *
@@ -21,6 +21,11 @@
  */
 package mServer.crawler.sender;
 
+import java.net.URL;
+import java.nio.charset.StandardCharsets;
+import java.util.ArrayList;
+import java.util.Iterator;
+
 import de.mediathekview.mlib.Config;
 import de.mediathekview.mlib.Const;
 import de.mediathekview.mlib.daten.Film;
@@ -31,39 +36,38 @@ import mServer.crawler.CrawlerTool;
 import mServer.crawler.FilmeSuchen;
 import mServer.crawler.GetUrl;
 
-import java.net.URI;
-import java.nio.charset.StandardCharsets;
-import java.util.ArrayList;
-import java.util.Iterator;
-
 public class MediathekRbb extends MediathekReader
 {
 
     public final static Sender SENDER = Sender.RBB;
     private static final String HTTP_PREFIX = "http://";
-    //final static String ROOTADR = "http://mediathek.rbb-online.de";
+    // final static String ROOTADR = "http://mediathek.rbb-online.de";
 
-    public MediathekRbb(FilmeSuchen ssearch, int startPrio)
+    public MediathekRbb(final FilmeSuchen ssearch, final int startPrio)
     {
-        super(ssearch, SENDER.getName(),/* threads */ 2, /* urlWarten */ 100, startPrio);
+        super(ssearch, SENDER.getName(), /* threads */ 2, /* urlWarten */ 100, startPrio);
     }
 
     @Override
     protected void addToList()
     {
         MSStringBuilder seite = new MSStringBuilder(Const.STRING_BUFFER_START_BUFFER);
-        // <a href="/tv/kurz-vor-5/Sendung?documentId=16272574&amp;bcastId=16272574" class="textLink">
-        ArrayList<String> liste = new ArrayList<>();
+        // <a
+        // href="/tv/kurz-vor-5/Sendung?documentId=16272574&amp;bcastId=16272574"
+        // class="textLink">
+        final ArrayList<String> liste = new ArrayList<>();
         final String ADRESSE_1 = "http://mediathek.rbb-online.de/tv/sendungen-a-z?cluster=a-k";
         final String ADRESSE_2 = "http://mediathek.rbb-online.de/tv/sendungen-a-z?cluster=l-z";
         final String URL = "<a href=\"/tv/";
         meldungStart();
         try
         {
-            GetUrl getUrlIo = new GetUrl(getWartenSeiteLaden());
-            seite = getUrlIo.getUri(SENDER.getName(), ADRESSE_1, StandardCharsets.UTF_8, 5 /* versuche */, seite, "" /* Meldung */);
+            final GetUrl getUrlIo = new GetUrl(getWartenSeiteLaden());
+            seite = getUrlIo.getUri(SENDER.getName(), ADRESSE_1, StandardCharsets.UTF_8,
+                    5 /* versuche */, seite, "" /* Meldung */);
             seite.extractList("", "", URL, "\"", "", liste);
-            seite = getUrlIo.getUri(SENDER.getName(), ADRESSE_2, StandardCharsets.UTF_8, 5 /* versuche */, seite, "" /* Meldung */);
+            seite = getUrlIo.getUri(SENDER.getName(), ADRESSE_2, StandardCharsets.UTF_8,
+                    5 /* versuche */, seite, "" /* Meldung */);
             seite.extractList("", "", URL, "\"", "", liste);
             for (String s : liste)
             {
@@ -72,30 +76,34 @@ public class MediathekRbb extends MediathekReader
                     continue;
                 }
                 s = "http://mediathek.rbb-online.de/tv/" + s;
-                listeThemen.add(new String[]{s});
+                listeThemen.add(new String[]
+                { s });
             }
-        } catch (Exception ex)
+        }
+        catch (final Exception ex)
         {
             Log.errorLog(398214058, ex);
         }
         if (Config.getStop())
         {
             meldungThreadUndFertig();
-        } else if (listeThemen.isEmpty())
+        }
+        else if (listeThemen.isEmpty())
         {
             meldungThreadUndFertig();
-        } else
+        }
+        else
         {
             meldungAddMax(listeThemen.size());
             for (int t = 0; t < getMaxThreadLaufen(); ++t)
             {
-                //new Thread(new ThemaLaden()).start();
-                Thread th = new Thread(new ThemaLaden(false /*addTage*/));
+                // new Thread(new ThemaLaden()).start();
+                final Thread th = new Thread(new ThemaLaden(false /* addTage */));
                 th.setName(SENDER.getName() + t);
                 th.start();
             }
             meldungAddMax(7 /* Tage */);
-            Thread th = new ThemaLaden(true /*addTage*/);
+            final Thread th = new ThemaLaden(true /* addTage */);
             th.setName(SENDER.getName() + "_Tage");
             th.start();
         }
@@ -109,7 +117,7 @@ public class MediathekRbb extends MediathekReader
         private MSStringBuilder seite2 = new MSStringBuilder(Const.STRING_BUFFER_START_BUFFER);
         private MSStringBuilder seite3 = new MSStringBuilder(Const.STRING_BUFFER_START_BUFFER);
 
-        public ThemaLaden(boolean addTage)
+        public ThemaLaden(final boolean addTage)
         {
             super();
             this.addTage = addTage;
@@ -124,7 +132,8 @@ public class MediathekRbb extends MediathekReader
                 if (addTage)
                 {
                     addTage();
-                } else
+                }
+                else
                 {
                     final Iterator<String[]> themaIterator = listeThemen.iterator();
                     while (!Config.getStop() && themaIterator.hasNext())
@@ -134,7 +143,8 @@ public class MediathekRbb extends MediathekReader
                         addThema(thema[0] /* url */, true);
                     }
                 }
-            } catch (Exception ex)
+            }
+            catch (final Exception ex)
             {
                 Log.errorLog(794625882, ex);
             }
@@ -152,7 +162,7 @@ public class MediathekRbb extends MediathekReader
             {
                 urlTage = "http://mediathek.rbb-online.de/tv/sendungVerpasst?topRessort=tv&tag=" + i;
                 meldungProgress(urlTage);
-                GetUrl getUrlIo = new GetUrl(getWartenSeiteLaden());
+                final GetUrl getUrlIo = new GetUrl(getWartenSeiteLaden());
                 seite1 = getUrlIo.getUri_Utf(SENDER.getName(), urlTage, seite1, "");
                 int pos1 = seite1.indexOf(MUSTER_START);
                 while (!Config.getStop() && (pos1 = seite1.indexOf(MUSTER_URL, pos1)) != -1)
@@ -164,7 +174,8 @@ public class MediathekRbb extends MediathekReader
                         urlSeite = urlSeite.replaceAll("&amp;", "&");
                         urlSeite = "http://mediathek.rbb-online.de/tv/" + urlSeite;
                         addFilme(urlSeite);
-                    } else
+                    }
+                    else
                     {
                         Log.errorLog(751203697, "keine URL für: " + urlSeite);
                     }
@@ -173,13 +184,13 @@ public class MediathekRbb extends MediathekReader
             }
         }
 
-        private void addThema(String url, boolean weiter)
+        private void addThema(final String url, final boolean weiter)
         {
             try
             {
                 final String URL = "<a href=\"/tv/";
                 final String MUSTER_URL = "<div class=\"media mediaA\">";
-                GetUrl getUrlIo = new GetUrl(getWartenSeiteLaden());
+                final GetUrl getUrlIo = new GetUrl(getWartenSeiteLaden());
                 seite1 = getUrlIo.getUri_Utf(SENDER.getName(), url, seite1, "");
                 int pos1 = seite1.indexOf("<div class=\"entry\">");
                 while (!Config.getStop() && (pos1 = seite1.indexOf(MUSTER_URL, pos1)) != -1)
@@ -191,7 +202,8 @@ public class MediathekRbb extends MediathekReader
                         urlSeite = urlSeite.replaceAll("&amp;", "&");
                         urlSeite = "http://mediathek.rbb-online.de/tv/" + urlSeite;
                         addFilme(urlSeite);
-                    } else
+                    }
+                    else
                     {
                         Log.errorLog(751203697, "keine URL für: " + url);
                     }
@@ -209,19 +221,20 @@ public class MediathekRbb extends MediathekReader
                         }
                     }
                 }
-            } catch (Exception ex)
+            }
+            catch (final Exception ex)
             {
                 Log.errorLog(541236987, ex);
             }
         }
 
-        private void addFilme(String urlSeite)
+        private void addFilme(final String urlSeite)
         {
             try
             {
                 meldung(urlSeite);
                 String datum = "", zeit = "", thema, title, description, durationInSeconds;
-                GetUrl getUrlIo = new GetUrl(getWartenSeiteLaden());
+                final GetUrl getUrlIo = new GetUrl(getWartenSeiteLaden());
                 seite2 = getUrlIo.getUri_Utf(SENDER.getName(), urlSeite, seite2, "");
                 description = seite2.extract("<meta name=\"description\" content=\"", "\"");
                 durationInSeconds = seite2.extract("<meta property=\"video:duration\" content=\"", "\"");
@@ -231,7 +244,8 @@ public class MediathekRbb extends MediathekReader
                     try
                     {
                         duration = Long.parseLong(durationInSeconds);
-                    } catch (Exception ex)
+                    }
+                    catch (final Exception ex)
                     {
                         Log.errorLog(200145787, ex);
                         duration = 0;
@@ -239,7 +253,7 @@ public class MediathekRbb extends MediathekReader
                 }
                 title = seite2.extract("<meta name=\"dcterms.title\" content=\"", "\"");
                 thema = seite2.extract("<meta name=\"dcterms.isPartOf\" content=\"", "\"");
-                String sub = seite2.extract("<p class=\"subtitle\">", "<");
+                final String sub = seite2.extract("<p class=\"subtitle\">", "<");
                 if (sub.contains("|"))
                 {
                     datum = sub.substring(0, sub.indexOf('|') - 1);
@@ -256,38 +270,40 @@ public class MediathekRbb extends MediathekReader
                     }
                 }
 
-
                 String urlFilm = urlSeite.substring(urlSeite.indexOf("documentId=") + "documentId=".length());
                 // http://mediathek.rbb-online.de/play/media/24938774?devicetype=pc&features=hls
                 urlFilm = "http://mediathek.rbb-online.de/play/media/" + urlFilm + "?devicetype=pc&features=hls";
                 seite3 = getUrlIo.getUri_Utf(SENDER.getName(), urlFilm, seite3, "");
                 String urlNormal = "", urlLow = "";
 
-
                 urlLow = getUrlLow("https");
-                if(urlLow.isEmpty())
+                if (urlLow.isEmpty())
                 {
-                    urlLow =getUrlLow("http");
-                    if(!urlLow.isEmpty())
+                    urlLow = getUrlLow("http");
+                    if (!urlLow.isEmpty())
                     {
                         urlLow = "http://" + urlLow;
                     }
-                }else {
+                }
+                else
+                {
                     urlLow = "https://" + urlLow;
                 }
 
                 urlNormal = getUrlNormal("https");
-                if(urlNormal.isEmpty())
+                if (urlNormal.isEmpty())
                 {
-                    urlNormal =getUrlNormal("http");
-                    if(!urlNormal.isEmpty())
+                    urlNormal = getUrlNormal("http");
+                    if (!urlNormal.isEmpty())
                     {
                         urlNormal = "http://" + urlNormal;
                     }
-                }else {
+                }
+                else
+                {
                     urlNormal = "https://" + urlNormal;
                 }
-                //http://http-stream.rbb-online.de/rbb/rbbreporter/rbbreporter_20151125_solange_ich_tanze_lebe_ich_WEB_L_16_9_960x544.mp4?url=5
+                // http://http-stream.rbb-online.de/rbb/rbbreporter/rbbreporter_20151125_solange_ich_tanze_lebe_ich_WEB_L_16_9_960x544.mp4?url=5
                 if (urlLow.contains("?url="))
                 {
                     urlLow = urlLow.substring(0, urlLow.indexOf("?url="));
@@ -315,58 +331,62 @@ public class MediathekRbb extends MediathekReader
                         subtitle = "http://mediathek.rbb-online.de" + subtitle;
                     }
                 }
-                if (datum.isEmpty() || zeit.isEmpty() || thema.isEmpty() || title.isEmpty() || description.isEmpty() || durationInSeconds.isEmpty())
+                if (datum.isEmpty() || zeit.isEmpty() || thema.isEmpty() || title.isEmpty() || description.isEmpty()
+                        || durationInSeconds.isEmpty())
                 {
                     Log.errorLog(912012036, "empty für: " + urlSeite);
                 }
                 if (!urlNormal.isEmpty())
                 {
 
-                    Film film = CrawlerTool.createFilm(SENDER,
-                            urlNormal,
-                            title,
-                            thema,
-                            datum,
-                            zeit,
-                            duration,
-                            urlSeite,
-                            description,
-                            "",
-                            urlLow);
+                    final Film film = CrawlerTool.createFilm(SENDER, urlNormal, title, thema, datum, zeit, duration,
+                            urlSeite, description, "", urlLow);
                     if (!subtitle.isEmpty())
                     {
-                        film.addSubtitle(new URI(subtitle));
+                        film.addSubtitle(new URL(subtitle));
                     }
                     addFilm(film);
-                } else
+                }
+                else
                 {
                     Log.errorLog(302014569, "keine URL für: " + urlSeite);
                 }
-            } catch (Exception ex)
+            }
+            catch (final Exception ex)
             {
                 Log.errorLog(541236987, ex);
             }
         }
 
-        private String getUrlNormal(String aProtocol)
+        private String getUrlNormal(final String aProtocol)
         {
             String urlNormal;
-            urlNormal = seite3.extract("\"_quality\":3,\"_server\":\"\",\"_cdn\":\"akamai\",", "\"_stream\":\""+aProtocol+"://", "\"");
-            if (urlNormal.isEmpty()) {
-                urlNormal = seite3.extract("\"_quality\":3,\"_server\":\"\",\"_cdn\":\"default\"", "\"_stream\":\""+aProtocol+"://", "\"");
+            urlNormal = seite3.extract("\"_quality\":3,\"_server\":\"\",\"_cdn\":\"akamai\",",
+                    "\"_stream\":\"" + aProtocol + "://", "\"");
+            if (urlNormal.isEmpty())
+            {
+                urlNormal = seite3.extract("\"_quality\":3,\"_server\":\"\",\"_cdn\":\"default\"",
+                        "\"_stream\":\"" + aProtocol + "://", "\"");
             }
-            if (urlNormal.isEmpty()) {
-                urlNormal = seite3.extract("\"_quality\":3,\"_server\":\"\",\"_cdn\":\"default\",\"_stream\":\""+aProtocol+"://", "\"");
+            if (urlNormal.isEmpty())
+            {
+                urlNormal = seite3.extract(
+                        "\"_quality\":3,\"_server\":\"\",\"_cdn\":\"default\",\"_stream\":\"" + aProtocol + "://",
+                        "\"");
             }
             return urlNormal;
         }
 
-        private String getUrlLow(String aProtocol)
+        private String getUrlLow(final String aProtocol)
         {
             String urlLow;
-            urlLow = seite3.extract("\"_quality\":1,\"_server\":\"\",\"_cdn\":\"akamai\",\"_stream\":\""+aProtocol+"://", "\"");
-            if (urlLow.isEmpty()) {
-                urlLow = seite3.extract("\"_quality\":1,\"_server\":\"\",\"_cdn\":\"default\",\"_stream\":\""+aProtocol+"://", "\"");
+            urlLow = seite3.extract(
+                    "\"_quality\":1,\"_server\":\"\",\"_cdn\":\"akamai\",\"_stream\":\"" + aProtocol + "://", "\"");
+            if (urlLow.isEmpty())
+            {
+                urlLow = seite3.extract(
+                        "\"_quality\":1,\"_server\":\"\",\"_cdn\":\"default\",\"_stream\":\"" + aProtocol + "://",
+                        "\"");
             }
             return urlLow;
         }
