@@ -19,6 +19,10 @@
  */
 package mServer.crawler.sender;
 
+import java.net.URL;
+import java.util.ArrayList;
+import java.util.Iterator;
+
 import de.mediathekview.mlib.Config;
 import de.mediathekview.mlib.Const;
 import de.mediathekview.mlib.daten.Film;
@@ -28,10 +32,6 @@ import de.mediathekview.mlib.tool.MSStringBuilder;
 import mServer.crawler.CrawlerTool;
 import mServer.crawler.FilmeSuchen;
 import mServer.crawler.GetUrl;
-
-import java.net.URI;
-import java.util.ArrayList;
-import java.util.Iterator;
 
 public class MediathekSr extends MediathekReader
 {
@@ -43,7 +43,7 @@ public class MediathekSr extends MediathekReader
      * @param ssearch
      * @param startPrio
      */
-    public MediathekSr(FilmeSuchen ssearch, int startPrio)
+    public MediathekSr(final FilmeSuchen ssearch, final int startPrio)
     {
         super(ssearch, SENDER.getName(), /* threads */ 2, /* urlWarten */ 100, startPrio);
     }
@@ -55,9 +55,12 @@ public class MediathekSr extends MediathekReader
     public void addToList()
     {
         meldungStart();
-        // seite1: http://sr-mediathek.sr-online.de/index.php?seite=2&f=v&s=1&o=d
-        // seite2: http://sr-mediathek.sr-online.de/index.php?seite=2&f=v&s=2&o=d
-        // seite3: http://sr-mediathek.sr-online.de/index.php?seite=2&f=v&s=3&o=d
+        // seite1:
+        // http://sr-mediathek.sr-online.de/index.php?seite=2&f=v&s=1&o=d
+        // seite2:
+        // http://sr-mediathek.sr-online.de/index.php?seite=2&f=v&s=2&o=d
+        // seite3:
+        // http://sr-mediathek.sr-online.de/index.php?seite=2&f=v&s=3&o=d
         int maxSeiten = 15;
         if (CrawlerTool.loadLongMax())
         {
@@ -65,23 +68,27 @@ public class MediathekSr extends MediathekReader
         }
         for (int i = 1; i < maxSeiten; ++i)
         {
-            //                                 http://www.sr-mediathek.de/index.php?seite=2&f=v&s=1&o=d
-            String[] add = new String[]{"http://www.sr-mediathek.de/index.php?seite=2&f=v&s=" + i + "&o=d", ""/*thema*/};
+            // http://www.sr-mediathek.de/index.php?seite=2&f=v&s=1&o=d
+            final String[] add = new String[]
+            { "http://www.sr-mediathek.de/index.php?seite=2&f=v&s=" + i + "&o=d",
+                    ""/* thema */ };
             listeThemen.add(add);
         }
 
         if (Config.getStop())
         {
             meldungThreadUndFertig();
-        } else if (listeThemen.isEmpty())
+        }
+        else if (listeThemen.isEmpty())
         {
             meldungThreadUndFertig();
-        } else
+        }
+        else
         {
             meldungAddMax(listeThemen.size());
             for (int t = 0; t < getMaxThreadLaufen(); ++t)
             {
-                Thread th = new ThemaLaden();
+                final Thread th = new ThemaLaden();
                 th.setName(SENDER.getName() + t);
                 th.start();
             }
@@ -106,22 +113,23 @@ public class MediathekSr extends MediathekReader
                 while (!Config.getStop() && themaIterator.hasNext())
                 {
                     final String[] thema = themaIterator.next();
-                    meldungProgress(thema[0] /*url*/);
-                    bearbeiteTage(thema[0]/*url*/);
+                    meldungProgress(thema[0] /* url */);
+                    bearbeiteTage(thema[0]/* url */);
                 }
-            } catch (Exception ex)
+            }
+            catch (final Exception ex)
             {
                 Log.errorLog(951236547, ex);
             }
             meldungThreadUndFertig();
         }
 
-        private void bearbeiteTage(String urlSeite)
+        private void bearbeiteTage(final String urlSeite)
         {
-            GetUrl getUrlIo = new GetUrl(getWartenSeiteLaden());
+            final GetUrl getUrlIo = new GetUrl(getWartenSeiteLaden());
             seite1 = getUrlIo.getUri_Utf(SENDER.getName(), urlSeite, seite1, "");
             seite1.extractList("<h3 class=\"teaser__text__header\">", "<a href=\"index.php?seite=", "\"", erg);
-            for (String url : erg)
+            for (final String url : erg)
             {
                 if (Config.getStop())
                 {
@@ -132,7 +140,7 @@ public class MediathekSr extends MediathekReader
             erg.clear();
         }
 
-        private void addFilme(String urlSeite)
+        private void addFilme(final String urlSeite)
         {
             meldung(urlSeite);
             seite2 = getUrl.getUri_Utf(SENDER.getName(), urlSeite, seite2, "");
@@ -144,13 +152,13 @@ public class MediathekSr extends MediathekReader
                 long duration = 0;
                 String description;
 
-                String d = seite2.extract("| Dauer: ", "|").trim();
+                final String d = seite2.extract("| Dauer: ", "|").trim();
                 try
                 {
                     if (!d.isEmpty())
                     {
                         duration = 0;
-                        String[] parts = d.split(":");
+                        final String[] parts = d.split(":");
                         long power = 1;
                         for (int i = parts.length - 1; i >= 0; i--)
                         {
@@ -158,15 +166,19 @@ public class MediathekSr extends MediathekReader
                             power *= 60;
                         }
                     }
-                } catch (Exception ex)
+                }
+                catch (final Exception ex)
                 {
                     Log.errorLog(732012546, "d: " + d);
                 }
                 description = seite2.extract("<meta property=\"og:description\" content=\"", "\"");
                 datum = seite2.extract("Video | ", "|").trim();
-                // <title>SR-Mediathek.de: Wir im Saarland – Warten aufs Christkind</title>
-                // <title>SR-Mediathek.de: mags spezial: Innewennzisch-Ausewennzisch (08.10.2015)</title>
-                // <title>SR-Mediathek.de: Wir im Saarland – Ein Kommissar als Zeitschenker (20.11.2015)</title>
+                // <title>SR-Mediathek.de: Wir im Saarland – Warten aufs
+                // Christkind</title>
+                // <title>SR-Mediathek.de: mags spezial:
+                // Innewennzisch-Ausewennzisch (08.10.2015)</title>
+                // <title>SR-Mediathek.de: Wir im Saarland – Ein Kommissar als
+                // Zeitschenker (20.11.2015)</title>
                 titel = seite2.extract("<title>", "<");
                 if (titel.startsWith("SR-Mediathek.de:"))
                 {
@@ -176,49 +188,47 @@ public class MediathekSr extends MediathekReader
                 {
                     thema = titel.substring(0, titel.indexOf(" - ")).trim();
                     titel = titel.substring(titel.indexOf(" - ") + 3).trim();
-                } else if (titel.contains(": "))
+                }
+                else if (titel.contains(": "))
                 {
                     thema = titel.substring(0, titel.indexOf(": ")).trim();
                     titel = titel.substring(titel.indexOf(": ") + 2).trim();
-                } else if (titel.contains(" – "))
+                }
+                else if (titel.contains(" – "))
                 {
                     thema = titel.substring(0, titel.indexOf(" – ")).trim();
                     titel = titel.substring(titel.indexOf(" – ") + 3).trim();
-                } else if (titel.contains("("))
+                }
+                else if (titel.contains("("))
                 {
                     thema = titel.substring(0, titel.indexOf('(')).trim();
-                    //titel = titel.substring(titel.indexOf("(") + 1).trim();
-                    //titel = titel.replace(")", "");
+                    // titel = titel.substring(titel.indexOf("(") + 1).trim();
+                    // titel = titel.replace(")", "");
                 }
-                String subtitle = seite2.extract("http_get.utPath", "= '", "'"); //http_get.utPath             = 'ut/AB_20150228.xml';
+                String subtitle = seite2.extract("http_get.utPath", "= '", "'"); // http_get.utPath
+                                                                                 // =
+                                                                                 // 'ut/AB_20150228.xml';
                 url = seite2.extract("var mediaURLs = ['", "'");
                 if (url.isEmpty())
                 {
                     Log.errorLog(301245789, "keine URL für: " + urlSeite);
-                } else
+                }
+                else
                 {
                     if (!subtitle.isEmpty() && !subtitle.startsWith(SUBTITLE_PREFIX))
                     {
                         subtitle = SUBTITLE_PREFIX + subtitle;
                     }
-                    Film film = CrawlerTool.createFilm(SENDER,
-                            url,
-                            titel,
-                            thema,
-                            datum,
-                            "",
-                            duration,
-                            urlSeite,
-                            description,
-                            "",
-                            "");
+                    final Film film = CrawlerTool.createFilm(SENDER, url, titel, thema, datum, "", duration, urlSeite,
+                            description, "", "");
                     if (!subtitle.isEmpty())
                     {
-                        film.addSubtitle(new URI(subtitle));
+                        film.addSubtitle(new URL(subtitle));
                     }
                     addFilm(film);
                 }
-            } catch (Exception ex)
+            }
+            catch (final Exception ex)
             {
                 Log.errorLog(402583366, ex);
             }
