@@ -2,7 +2,7 @@
  *    MediathekView
  *    Copyright (C) 2008 - 2012     W. Xaver
  *                              &   thausherr
- * 
+ *
  *    W.Xaver[at]googlemail.com
  *    http://zdfmediathk.sourceforge.net/
  *
@@ -21,8 +21,8 @@
  */
 package mServer.crawler.sender;
 
-import java.net.URI;
-import java.net.URISyntaxException;
+import java.net.MalformedURLException;
+import java.net.URL;
 import java.nio.charset.StandardCharsets;
 import java.text.SimpleDateFormat;
 import java.util.ArrayList;
@@ -58,18 +58,18 @@ public class MediathekWdr extends MediathekReader
     private MSStringBuilder seite_1 = new MSStringBuilder(Const.STRING_BUFFER_START_BUFFER);
     private MSStringBuilder seite_2 = new MSStringBuilder(Const.STRING_BUFFER_START_BUFFER);
 
-    public MediathekWdr(FilmeSuchen ssearch, int startPrio)
+    public MediathekWdr(final FilmeSuchen ssearch, final int startPrio)
     {
-        super(ssearch, SENDER.getName(),/* threads */ 3, /* urlWarten */ 100, startPrio);
+        super(ssearch, SENDER.getName(), /* threads */ 3, /* urlWarten */ 100, startPrio);
     }
 
-    //===================================
+    // ===================================
     // public
-    //===================================
+    // ===================================
     @Override
     public synchronized void addToList()
     {
-        //Theman suchen
+        // Theman suchen
         listeThemen.clear();
         listeTage.clear();
         listeFestival.clear();
@@ -84,44 +84,55 @@ public class MediathekWdr extends MediathekReader
             maus();
             rockpalast();
             festival();
-            // damit sie auch gestartet werden (im idealfall in unterschiedlichen Threads
-            String[] add = new String[]{ROCKPALAST_URL, "Rockpalast"};
+            // damit sie auch gestartet werden (im idealfall in
+            // unterschiedlichen Threads
+            String[] add = new String[]
+            { ROCKPALAST_URL, "Rockpalast" };
             listeThemen.add(add);
-            add = new String[]{ROCKPALAST_FESTIVAL, "Rockpalast"};
+            add = new String[]
+            { ROCKPALAST_FESTIVAL, "Rockpalast" };
             listeThemen.add(add);
-            add = new String[]{MAUS, "Maus"};
+            add = new String[]
+            { MAUS, "Maus" };
             listeThemen.add(add);
         }
 
         if (Config.getStop())
         {
             meldungThreadUndFertig();
-        } else if (listeThemen.isEmpty() && listeTage.isEmpty() && listeFestival.isEmpty() && listeRochpalast.isEmpty() && listeMaus.isEmpty())
+        }
+        else if (listeThemen.isEmpty() && listeTage.isEmpty() && listeFestival.isEmpty() && listeRochpalast.isEmpty()
+                && listeMaus.isEmpty())
         {
             meldungThreadUndFertig();
-        } else
+        }
+        else
         {
-            meldungAddMax(listeThemen.size() + listeTage.size() + listeFestival.size() + listeRochpalast.size() + listeMaus.size());
+            meldungAddMax(listeThemen.size() + listeTage.size() + listeFestival.size() + listeRochpalast.size()
+                    + listeMaus.size());
             for (int t = 0; t < getMaxThreadLaufen(); ++t)
             {
-                Thread th = new ThemaLaden();
+                final Thread th = new ThemaLaden();
                 th.setName(SENDER.getName() + t);
                 th.start();
             }
         }
     }
 
-    //===================================
+    // ===================================
     // private
-    //===================================
+    // ===================================
     private void rockpalast()
     {
         try
         {
-            GetUrl getUrlIo = new GetUrl(getWartenSeiteLaden());
-            seite_1 = getUrlIo.getUri(SENDER.getName(), ROCKPALAST_URL, StandardCharsets.UTF_8, 3 /* versuche */, seite_1, "");
-            seite_1.extractList("", "", "<a href=\"/mediathek/video", "\"", "http://www1.wdr.de/mediathek/video/", listeRochpalast);
-        } catch (Exception ex)
+            final GetUrl getUrlIo = new GetUrl(getWartenSeiteLaden());
+            seite_1 = getUrlIo.getUri(SENDER.getName(), ROCKPALAST_URL, StandardCharsets.UTF_8,
+                    3 /* versuche */, seite_1, "");
+            seite_1.extractList("", "", "<a href=\"/mediathek/video", "\"", "http://www1.wdr.de/mediathek/video/",
+                    listeRochpalast);
+        }
+        catch (final Exception ex)
         {
             Log.errorLog(915423698, ex);
         }
@@ -132,12 +143,14 @@ public class MediathekWdr extends MediathekReader
         // http://www.wdrmaus.de/lachgeschichten/mausspots/achterbahn.php5
         final String ROOTADR = "http://www.wdrmaus.de/lachgeschichten/";
         final String ITEM_1 = "<li class=\"filmvorschau\"><a href=\"../lachgeschichten/";
-        GetUrl getUrlIo = new GetUrl(getWartenSeiteLaden());
-        seite_1 = getUrlIo.getUri(SENDER.getName(), MAUS, StandardCharsets.UTF_8, 3 /* versuche */, seite_1, "");
+        final GetUrl getUrlIo = new GetUrl(getWartenSeiteLaden());
+        seite_1 = getUrlIo.getUri(SENDER.getName(), MAUS, StandardCharsets.UTF_8,
+                3 /* versuche */, seite_1, "");
         try
         {
             seite_1.extractList("", "", ITEM_1, "\"", ROOTADR, listeMaus);
-        } catch (Exception ex)
+        }
+        catch (final Exception ex)
         {
             Log.errorLog(975456987, ex);
         }
@@ -146,12 +159,15 @@ public class MediathekWdr extends MediathekReader
     private void festival()
     {
         // http://www1.wdr.de/fernsehen/kultur/rockpalast/videos/rockpalastvideos_festivals100.html
-        GetUrl getUrlIo = new GetUrl(getWartenSeiteLaden());
-        seite_1 = getUrlIo.getUri(SENDER.getName(), ROCKPALAST_FESTIVAL, StandardCharsets.UTF_8, 3 /* versuche */, seite_1, "");
+        final GetUrl getUrlIo = new GetUrl(getWartenSeiteLaden());
+        seite_1 = getUrlIo.getUri(SENDER.getName(), ROCKPALAST_FESTIVAL, StandardCharsets.UTF_8,
+                3 /* versuche */, seite_1, "");
         try
         {
-            seite_1.extractList("", "", "<a href=\"/fernsehen/rockpalast/events/", "\"", "http://www1.wdr.de/fernsehen/rockpalast/events/", listeFestival);
-        } catch (Exception ex)
+            seite_1.extractList("", "", "<a href=\"/fernsehen/rockpalast/events/", "\"",
+                    "http://www1.wdr.de/fernsehen/rockpalast/events/", listeFestival);
+        }
+        catch (final Exception ex)
         {
             Log.errorLog(432365698, ex);
         }
@@ -159,16 +175,17 @@ public class MediathekWdr extends MediathekReader
 
     private void addTage()
     {
-        // Sendung verpasst, da sind einige die nicht in einer "Sendung" enthalten sind
+        // Sendung verpasst, da sind einige die nicht in einer "Sendung"
+        // enthalten sind
         // URLs nach dem Muster bauen:
         // http://www1.wdr.de/mediathek/video/sendungverpasst/sendung-verpasst-100~_tag-27022016.html
-        SimpleDateFormat formatter = new SimpleDateFormat("ddMMyyyy");
+        final SimpleDateFormat formatter = new SimpleDateFormat("ddMMyyyy");
         String tag;
         for (int i = 1; i < 14; ++i)
         {
             final String URL = "http://www1.wdr.de/mediathek/video/sendungverpasst/sendung-verpasst-100~_tag-";
-            tag = formatter.format(new Date().getTime() - (1000 * 60 * 60 * 24 * i));
-            String urlString = URL + tag + ".html";
+            tag = formatter.format(new Date().getTime() - 1000 * 60 * 60 * 24 * i);
+            final String urlString = URL + tag + ".html";
             listeTage.add(urlString);
         }
     }
@@ -176,10 +193,10 @@ public class MediathekWdr extends MediathekReader
     private void addToList__()
     {
         // http://www1.wdr.de/mediathek/video/sendungen/abisz-b100.html
-        //Theman suchen
+        // Theman suchen
         final String URL = "http://www1.wdr.de/mediathek/video/sendungen-a-z/index.html";
         final String MUSTER_URL = "<a href=\"/mediathek/video/sendungen-a-z/";
-        GetUrl getUrlIo = new GetUrl(getWartenSeiteLaden());
+        final GetUrl getUrlIo = new GetUrl(getWartenSeiteLaden());
         seite_1 = getUrlIo.getUri_Iso(SENDER.getName(), URL, seite_1, "");
         int pos1;
         int pos2;
@@ -199,7 +216,8 @@ public class MediathekWdr extends MediathekReader
                 if (url.isEmpty())
                 {
                     Log.errorLog(995122047, "keine URL");
-                } else
+                }
+                else
                 {
                     url = "http://www1.wdr.de/mediathek/video/sendungen-a-z/" + url;
                     themenSeitenSuchen(url);
@@ -208,13 +226,13 @@ public class MediathekWdr extends MediathekReader
         }
     }
 
-    private void themenSeitenSuchen(String strUrlFeed)
+    private void themenSeitenSuchen(final String strUrlFeed)
     {
         final String MUSTER_URL = "<a href=\"/mediathek/video/sendungen/";
         int pos1 = 0;
         int pos2;
         String url;
-        GetUrl getUrlIo = new GetUrl(getWartenSeiteLaden());
+        final GetUrl getUrlIo = new GetUrl(getWartenSeiteLaden());
         seite_2 = getUrlIo.getUri_Iso(SENDER.getName(), strUrlFeed, seite_2, "");
         meldung(strUrlFeed);
         while (!Config.getStop() && (pos1 = seite_2.indexOf(MUSTER_URL, pos1)) != -1)
@@ -226,12 +244,14 @@ public class MediathekWdr extends MediathekReader
                 if (!url.isEmpty())
                 {
                     url = "http://www1.wdr.de/mediathek/video/sendungen/" + url;
-                    //weiter gehts
+                    // weiter gehts
                     String[] add;
-                    add = new String[]{url, ""};
+                    add = new String[]
+                    { url, "" };
                     listeThemen.add(add);
                 }
-            } else
+            }
+            else
             {
                 Log.errorLog(375862100, "keine Url" + strUrlFeed);
             }
@@ -241,7 +261,7 @@ public class MediathekWdr extends MediathekReader
     private class ThemaLaden extends Thread
     {
 
-        //private final GetUrl getUrl = new GetUrl(getWartenSeiteLaden());
+        // private final GetUrl getUrl = new GetUrl(getWartenSeiteLaden());
         private MSStringBuilder sendungsSeite1 = new MSStringBuilder(Const.STRING_BUFFER_START_BUFFER);
         private MSStringBuilder sendungsSeite2 = new MSStringBuilder(Const.STRING_BUFFER_START_BUFFER);
         private MSStringBuilder sendungsSeite3 = new MSStringBuilder(Const.STRING_BUFFER_START_BUFFER);
@@ -264,18 +284,18 @@ public class MediathekWdr extends MediathekReader
                     {
                         switch (thema[0])
                         {
-                            case ROCKPALAST_URL:
-                                themenSeiteRockpalast();
-                                break;
-                            case ROCKPALAST_FESTIVAL:
-                                themenSeiteFestival();
-                                break;
-                            case MAUS:
-                                addFilmeMaus();
-                                break;
-                            default:
-                                sendungsSeitenSuchen1(thema[0] /* url */);
-                                break;
+                        case ROCKPALAST_URL:
+                            themenSeiteRockpalast();
+                            break;
+                        case ROCKPALAST_FESTIVAL:
+                            themenSeiteFestival();
+                            break;
+                        case MAUS:
+                            addFilmeMaus();
+                            break;
+                        default:
+                            sendungsSeitenSuchen1(thema[0] /* url */);
+                            break;
                         }
                     }
                     meldungProgress(thema[0]);
@@ -287,14 +307,15 @@ public class MediathekWdr extends MediathekReader
                     sendungsSeitenSuchen2(url, SENDER.getName());
                 }
 
-            } catch (Exception ex)
+            }
+            catch (final Exception ex)
             {
                 Log.errorLog(633250489, ex);
             }
             meldungThreadUndFertig();
         }
 
-        private void sendungsSeitenSuchen1(String strUrl)
+        private void sendungsSeitenSuchen1(final String strUrl)
         {
             meldung(strUrl);
             // Sendungen auf der Seite
@@ -305,10 +326,11 @@ public class MediathekWdr extends MediathekReader
                 // sonst wars das
                 final GetUrl getUrl = new GetUrl(getWartenSeiteLaden());
                 sendungsSeite1 = getUrl.getUri_Utf(SENDER.getName(), strUrl, sendungsSeite1, "");
-                sendungsSeite1.extractList("<ul class=\"pageCounterNavi\">", "</ul>", "<a href=\"/mediathek/video/sendungen/", "\"",
-                        "http://www1.wdr.de/mediathek/video/sendungen/", liste_1);
+                sendungsSeite1.extractList("<ul class=\"pageCounterNavi\">", "</ul>",
+                        "<a href=\"/mediathek/video/sendungen/", "\"", "http://www1.wdr.de/mediathek/video/sendungen/",
+                        liste_1);
             }
-            for (String u : liste_1)
+            for (final String u : liste_1)
             {
                 if (Config.getStop())
                 {
@@ -318,18 +340,19 @@ public class MediathekWdr extends MediathekReader
             }
         }
 
-        private void sendungsSeitenSuchen2(String strUrl, String th)
+        private void sendungsSeitenSuchen2(final String strUrl, final String th)
         {
             final String MUSTER_URL = "<div class=\"teaser hideTeasertext\">";
             int pos;
             String url;
             String titel;
             String dauer;
-            String datum = "";
+            final String datum = "";
             String thema;
             long duration = 0;
 
-            if (strUrl.startsWith("http://www1.wdr.de/mediathek/video/sendungen/lokalzeit/uebersicht-lokalzeiten100_tag"))
+            if (strUrl
+                    .startsWith("http://www1.wdr.de/mediathek/video/sendungen/lokalzeit/uebersicht-lokalzeiten100_tag"))
             {
                 // brauchts nicht
                 return;
@@ -345,18 +368,20 @@ public class MediathekWdr extends MediathekReader
             if (!th.isEmpty())
             {
                 thema = th;
-            } else {
+            }
+            else
+            {
                 thema = parseThema(sendungsSeite2);
             }
 
-            //Lokalzeit, ..
-            String u = sendungsSeite2.extract("data-extension=\"{ 'mediaObj': { 'url': '", "'");
+            // Lokalzeit, ..
+            final String u = sendungsSeite2.extract("data-extension=\"{ 'mediaObj': { 'url': '", "'");
             if (!u.isEmpty())
             {
                 sendungsSeitenSuchenNeu(strUrl, sendungsSeite2, thema);
             }
 
-            //Lokalzeit
+            // Lokalzeit
             // <div class="teaser video">
             pos = 0;
             while (!Config.getStop() && (pos = sendungsSeite2.indexOf("<div class=\"teaser video\">", pos)) != -1)
@@ -370,16 +395,17 @@ public class MediathekWdr extends MediathekReader
                     titel = sendungsSeite2.extract("</span>", "<", pos).trim();
                     titel = titel.replace("\n", "");
 
-                    //                    datum = sendungsSeite2.extract("<p class=\"subtitle\">", "|", pos).trim();
-                    //                    if (datum.length() != 10) {
-                    //                        datum = "";
-                    //                    }
+                    // datum = sendungsSeite2.extract("<p class=\"subtitle\">",
+                    // "|", pos).trim();
+                    // if (datum.length() != 10) {
+                    // datum = "";
+                    // }
                     dauer = sendungsSeite2.extract("<span class=\"hidden\">L&auml;nge: </span>", "<", pos).trim();
                     try
                     {
                         if (!dauer.isEmpty())
                         {
-                            String[] parts = dauer.split(":");
+                            final String[] parts = dauer.split(":");
                             duration = 0;
                             long power = 1;
                             for (int i = parts.length - 1; i >= 0; i--)
@@ -388,14 +414,16 @@ public class MediathekWdr extends MediathekReader
                                 power *= 60;
                             }
                         }
-                    } catch (Exception ex)
+                    }
+                    catch (final Exception ex)
                     {
                         Log.errorLog(915263654, ex, strUrl);
                     }
 
-                    //weiter gehts
+                    // weiter gehts
                     addFilm1(thema, titel, url, duration, datum);
-                } else
+                }
+                else
                 {
                     Log.errorLog(731201247, "keine Url" + strUrl);
                 }
@@ -413,16 +441,17 @@ public class MediathekWdr extends MediathekReader
                     titel = sendungsSeite2.extract("<span class=\"hidden\">Video:</span>", "<", pos).trim();
                     titel = titel.replace("\n", "");
 
-                    //                    datum = sendungsSeite2.extract("<p class=\"programInfo\">", "|", pos).trim();
-                    //                    if (datum.length() != 8) {
-                    //                        datum = "";
-                    //                    }
+                    // datum = sendungsSeite2.extract("<p
+                    // class=\"programInfo\">", "|", pos).trim();
+                    // if (datum.length() != 8) {
+                    // datum = "";
+                    // }
                     dauer = sendungsSeite2.extract("<span class=\"hidden\">L&auml;nge: </span>", "<", pos).trim();
                     try
                     {
                         if (!dauer.isEmpty())
                         {
-                            String[] parts = dauer.split(":");
+                            final String[] parts = dauer.split(":");
                             duration = 0;
                             long power = 1;
                             for (int i = parts.length - 1; i >= 0; i--)
@@ -431,23 +460,25 @@ public class MediathekWdr extends MediathekReader
                                 power *= 60;
                             }
                         }
-                    } catch (Exception ex)
+                    }
+                    catch (final Exception ex)
                     {
                         Log.errorLog(306597519, ex, strUrl);
                     }
 
-                    //weiter gehts
+                    // weiter gehts
                     addFilm1(thema, titel, url, duration, datum);
-                } else
+                }
+                else
                 {
                     Log.errorLog(646432970, "keine Url" + strUrl);
                 }
             }
         }
 
-        private void sendungsSeitenSuchenNeu(String strUrl, MSStringBuilder seite, String thema)
+        private void sendungsSeitenSuchenNeu(final String strUrl, MSStringBuilder seite, String thema)
         {
-            //Lokalzeit, ..
+            // Lokalzeit, ..
             String u = seite.extract("data-extension=\"{ 'mediaObj': { 'url': '", "'");
             if (!u.isEmpty())
             {
@@ -456,7 +487,7 @@ public class MediathekWdr extends MediathekReader
 
             liste_2.clear();
             seite.extractList("Letzte Sendungen", "Neuer Abschnitt", "<a href=\"", "\"", "http://www1.wdr.de", liste_2);
-            for (String ur : liste_2)
+            for (final String ur : liste_2)
             {
                 if (Config.getStop())
                 {
@@ -473,7 +504,6 @@ public class MediathekWdr extends MediathekReader
 
                 thema = parseThema(seite);
 
-
                 u = seite.extract("data-extension=\"{ 'mediaObj': { 'url': '", "'");
                 if (!u.isEmpty())
                 {
@@ -482,7 +512,8 @@ public class MediathekWdr extends MediathekReader
             }
         }
 
-        private void addFilm1(String thema, String titel, String filmWebsite, long dauer, String datum)
+        private void addFilm1(String thema, final String titel, final String filmWebsite, final long dauer,
+                final String datum)
         {
             meldung(filmWebsite);
             final GetUrl getUrl = new GetUrl(getWartenSeiteLaden());
@@ -493,9 +524,10 @@ public class MediathekWdr extends MediathekReader
             }
             if (sendungsSeite3.length() == 0)
             {
-                Log.errorLog(751236547, new String[]{"leere Seite: " + filmWebsite});
+                Log.errorLog(751236547, new String[]
+                { "leere Seite: " + filmWebsite });
             }
-            String description = sendungsSeite3.extract("<p class=\"text\">", "<");
+            final String description = sendungsSeite3.extract("<p class=\"text\">", "<");
             if (thema.isEmpty())
             {
                 thema = sendungsSeite3.extract("{ 'offset': '0' }}\" title=\"", "\"");
@@ -510,22 +542,25 @@ public class MediathekWdr extends MediathekReader
                 }
             }
             // URL suchen
-            String url = sendungsSeite3.extract("mediaObj': { 'url': '", "'");
+            final String url = sendungsSeite3.extract("mediaObj': { 'url': '", "'");
             if (!url.isEmpty())
             {
                 addFilm2(filmWebsite, thema, titel, url, dauer, datum, description);
-            } else
+            }
+            else
             {
-                Log.errorLog(763299001, new String[]{"keine Url: " + filmWebsite});
+                Log.errorLog(763299001, new String[]
+                { "keine Url: " + filmWebsite });
             }
 
         }
 
-        private void addFilm2(String filmWebsite, String thema, String titel, String urlFilmSuchen, long dauer, String datum, String beschreibung)
+        private void addFilm2(final String filmWebsite, final String thema, String titel, final String urlFilmSuchen,
+                final long dauer, String datum, final String beschreibung)
         {
-            final String INDEX_0 = "index_0_av.m3u8"; //kleiner
-            final String INDEX_1 = "index_1_av.m3u8"; //klein
-            final String INDEX_2 = "index_2_av.m3u8"; //hohe Auflösung
+            final String INDEX_0 = "index_0_av.m3u8"; // kleiner
+            final String INDEX_1 = "index_1_av.m3u8"; // klein
+            final String INDEX_2 = "index_2_av.m3u8"; // hohe Auflösung
             meldung(urlFilmSuchen);
             final GetUrl getUrl = new GetUrl(getWartenSeiteLaden());
             sendungsSeite4 = getUrl.getUri_Utf(SENDER.getName(), urlFilmSuchen, sendungsSeite4, "");
@@ -541,24 +576,27 @@ public class MediathekWdr extends MediathekReader
             String f4m = sendungsSeite4.extract("\"dflt\":{\"videoURL\":\"", "\"");
 
             // Fehlendes Protokoll ergänzen, wenn es fehlt. kommt teilweise vor.
-            String protocol = urlFilmSuchen.substring(0, urlFilmSuchen.indexOf(':'));
+            final String protocol = urlFilmSuchen.substring(0, urlFilmSuchen.indexOf(':'));
             urlNorm = addProtocolIfMissing(urlNorm, protocol);
             f4m = addProtocolIfMissing(f4m, protocol);
-            
-            if (urlNorm.endsWith(".m3u8")) {
+
+            if (urlNorm.endsWith(".m3u8"))
+            {
                 final String urlM3 = urlNorm;
                 m3u8Page = getUrl.getUri_Utf(SENDER.getName(), urlNorm, m3u8Page, "");
                 if (m3u8Page.indexOf(INDEX_2) != -1)
                 {
                     urlNorm = getUrlFromM3u8(urlM3, INDEX_2);
-                } else if (m3u8Page.indexOf(INDEX_1) != -1)
+                }
+                else if (m3u8Page.indexOf(INDEX_1) != -1)
                 {
                     urlNorm = getUrlFromM3u8(urlM3, INDEX_1);
                 }
                 if (m3u8Page.indexOf(INDEX_0) != -1)
                 {
                     urlKlein = getUrlFromM3u8(urlM3, INDEX_0);
-                } else if (m3u8Page.indexOf(INDEX_1) != -1)
+                }
+                else if (m3u8Page.indexOf(INDEX_1) != -1)
                 {
                     urlKlein = getUrlFromM3u8(urlM3, INDEX_1);
                 }
@@ -577,11 +615,11 @@ public class MediathekWdr extends MediathekReader
             {
                 // http://adaptiv.wdr.de/z/medp/ww/fsk0/104/1048369/,1048369_11885064,1048369_11885062,1048369_11885066,.mp4.csmil/manifest.f4m
                 // http://ondemand-ww.wdr.de/medp/fsk0/104/1048369/1048369_11885062.mp4
-                String s1 = urlNorm.substring(urlNorm.lastIndexOf('_') + 1, urlNorm.indexOf(".mp4"));
-                String s2 = urlNorm.substring(0, urlNorm.lastIndexOf('_') + 1);
+                final String s1 = urlNorm.substring(urlNorm.lastIndexOf('_') + 1, urlNorm.indexOf(".mp4"));
+                final String s2 = urlNorm.substring(0, urlNorm.lastIndexOf('_') + 1);
                 try
                 {
-                    int nr = Integer.parseInt(s1);
+                    final int nr = Integer.parseInt(s1);
                     if (f4m.contains(nr + 2 + ""))
                     {
                         urlHd = s2 + (nr + 2) + ".mp4";
@@ -590,7 +628,8 @@ public class MediathekWdr extends MediathekReader
                     {
                         urlKlein = s2 + (nr + 4) + ".mp4";
                     }
-                } catch (Exception ignore)
+                }
+                catch (final Exception ignore)
                 {
                 }
                 if (!urlHd.isEmpty())
@@ -613,23 +652,25 @@ public class MediathekWdr extends MediathekReader
                 titel = titel.replace("\\\"", "\"");
             }
 
-            String subtitle = sendungsSeite4.extract("\"captionURL\":\"", "\"");
+            final String subtitle = sendungsSeite4.extract("\"captionURL\":\"", "\"");
 
             if (datum.isEmpty())
             {
-                String d = sendungsSeite4.extract("\"trackerClipAirTime\":\"", "\"");
+                final String d = sendungsSeite4.extract("\"trackerClipAirTime\":\"", "\"");
                 if (d.contains(" "))
                 {
                     zeit = d.substring(d.indexOf(' ')) + ":00";
                     datum = d.substring(0, d.indexOf(' '));
                 }
-            } else
+            }
+            else
             {
-                String d = sendungsSeite4.extract("\"trackerClipAirTime\":\"", "\"");
+                final String d = sendungsSeite4.extract("\"trackerClipAirTime\":\"", "\"");
                 if (d.contains(" "))
                 {
                     zeit = d.substring(d.indexOf(' ')) + ":00";
-                } else
+                }
+                else
                 {
                     System.out.println("Zeit");
                 }
@@ -640,7 +681,7 @@ public class MediathekWdr extends MediathekReader
                 if (thema.endsWith(SENDER.getName()))
                 {
                     // dann nur wenn die URL noch nicht enthalten
-                    Film f = mlibFilmeSuchen.listeFilmeNeu.getFilmByUrl(urlNorm);
+                    final Film f = mlibFilmeSuchen.listeFilmeNeu.getFilmByUrl(urlNorm);
                     if (f != null)
                     {
                         return;
@@ -648,57 +689,59 @@ public class MediathekWdr extends MediathekReader
                 }
                 try
                 {
-                    Film film = CrawlerTool.createFilm(SENDER,
-                            urlNorm,
-                            titel,
-                            thema,
-                            datum,
-                            zeit,
-                            dauer,
-                            filmWebsite,
-                            beschreibung,
-                            urlHd,
-                            urlKlein);
+                    final Film film = CrawlerTool.createFilm(SENDER, urlNorm, titel, thema, datum, zeit, dauer,
+                            filmWebsite, beschreibung, urlHd, urlKlein);
                     if (!subtitle.isEmpty())
                     {
-                        film.addSubtitle(new URI(subtitle));
+                        film.addSubtitle(new URL(subtitle));
                     }
                     addFilm(film);
-                } catch (URISyntaxException uriSyntaxEception)
-                {
-                    LOG.error(String.format("Der Film \"%s - %s\" konnte nicht umgewandelt werden.", thema, titel), uriSyntaxEception);
                 }
-            } else
+                catch (final MalformedURLException malformedURLException)
+                {
+                    LOG.error(String.format("Der Film \"%s - %s\" konnte nicht umgewandelt werden.", thema, titel),
+                            malformedURLException);
+                }
+            }
+            else
             {
-                Log.errorLog(978451239, new String[]{"keine Url: " + urlFilmSuchen, "UrlThema: " + filmWebsite});
+                Log.errorLog(978451239, new String[]
+                { "keine Url: " + urlFilmSuchen, "UrlThema: " + filmWebsite });
             }
         }
-        
-        private String addProtocolIfMissing(String url, String protocol) {
-            if(url.startsWith("//")) {
+
+        private String addProtocolIfMissing(final String url, final String protocol)
+        {
+            if (url.startsWith("//"))
+            {
                 return protocol + ":" + url;
-            } else if(url.startsWith("://")) {
+            }
+            else if (url.startsWith("://"))
+            {
                 return protocol + url;
             }
-            
+
             return url;
         }
-        
-        private String parseThema(MSStringBuilder seite) {
+
+        private String parseThema(final MSStringBuilder seite)
+        {
             String thema = seite.extract("<title>", "<");
             thema = thema.replace("- Sendung - Video - Mediathek - WDR", "")
                     .replace(" - Sendungen A-Z - Video - Mediathek - WDR", "").trim();
-            if(thema.startsWith("Video:")) {
+            if (thema.startsWith("Video:"))
+            {
                 thema = thema.substring(6).trim();
             }
-            if (thema.startsWith("Unser Sendungsarchiv")) {
+            if (thema.startsWith("Unser Sendungsarchiv"))
+            {
                 thema = "";
             }
-                
+
             return thema;
         }
 
-        private String getUrlFromM3u8(String m3u8Url, String qualityIndex)
+        private String getUrlFromM3u8(final String m3u8Url, final String qualityIndex)
         {
             final String CSMIL = "csmil/";
             return m3u8Url.substring(0, m3u8Url.indexOf(CSMIL)) + CSMIL + qualityIndex;
@@ -708,7 +751,7 @@ public class MediathekWdr extends MediathekReader
         {
             try
             {
-                for (String urlRock : listeRochpalast)
+                for (final String urlRock : listeRochpalast)
                 {
                     meldungProgress(urlRock);
                     if (Config.getStop())
@@ -718,13 +761,14 @@ public class MediathekWdr extends MediathekReader
                     // Konzerte suchen
                     final GetUrl getUrl = new GetUrl(getWartenSeiteLaden());
                     sendungsSeite1 = getUrl.getUri_Utf(SENDER.getName(), urlRock, sendungsSeite1, "");
-                    String u = sendungsSeite1.extract("data-extension=\"{ 'mediaObj': { 'url': '", "'");
+                    final String u = sendungsSeite1.extract("data-extension=\"{ 'mediaObj': { 'url': '", "'");
                     if (!u.isEmpty())
                     {
                         addFilm2(urlRock, "Rockpalast", "", u, 0, "", "");
                     }
                 }
-            } catch (Exception ex)
+            }
+            catch (final Exception ex)
             {
                 Log.errorLog(696963025, ex);
             }
@@ -734,7 +778,7 @@ public class MediathekWdr extends MediathekReader
         {
             try
             {
-                for (String urlRock : listeFestival)
+                for (final String urlRock : listeFestival)
                 {
                     meldungProgress(urlRock);
                     if (Config.getStop())
@@ -744,13 +788,14 @@ public class MediathekWdr extends MediathekReader
                     // Konzerte suchen
                     final GetUrl getUrl = new GetUrl(getWartenSeiteLaden());
                     sendungsSeite1 = getUrl.getUri_Utf(SENDER.getName(), urlRock, sendungsSeite1, "");
-                    String u = sendungsSeite1.extract("data-extension=\"{ 'mediaObj': { 'url': '", "'");
+                    final String u = sendungsSeite1.extract("data-extension=\"{ 'mediaObj': { 'url': '", "'");
                     if (!u.isEmpty())
                     {
                         addFilm2(urlRock, "Rockpalast - Festival", "", u, 0, "", "");
                     }
                 }
-            } catch (Exception ex)
+            }
+            catch (final Exception ex)
             {
                 Log.errorLog(915263698, ex);
             }
@@ -760,7 +805,7 @@ public class MediathekWdr extends MediathekReader
         {
             try
             {
-                for (String filmWebsite : listeMaus)
+                for (final String filmWebsite : listeMaus)
                 {
                     meldungProgress(filmWebsite);
                     if (Config.getStop())
@@ -770,16 +815,30 @@ public class MediathekWdr extends MediathekReader
                     final GetUrl getUrl = new GetUrl(getWartenSeiteLaden());
                     sendungsSeite1 = getUrl.getUri_Utf(SENDER.getName(), filmWebsite, sendungsSeite1, "");
 
-                    String titel = sendungsSeite1.extract("<title>", "<"); //<title>Achterbahn - MausSpots - Lachgeschichten - Die Seite mit der Maus - WDR Fernsehen</title>
+                    String titel = sendungsSeite1.extract("<title>", "<"); // <title>Achterbahn
+                                                                           // -
+                                                                           // MausSpots
+                                                                           // -
+                                                                           // Lachgeschichten
+                                                                           // -
+                                                                           // Die
+                                                                           // Seite
+                                                                           // mit
+                                                                           // der
+                                                                           // Maus
+                                                                           // -
+                                                                           // WDR
+                                                                           // Fernsehen</title>
                     titel = titel.replace("\n", "");
                     if (titel.contains("-"))
                     {
                         titel = titel.substring(0, titel.indexOf('-')).trim();
                     }
-                    String jsUrl = sendungsSeite1.extract("'mediaObj': { 'url': '", "'");
+                    final String jsUrl = sendungsSeite1.extract("'mediaObj': { 'url': '", "'");
                     addFilm2(filmWebsite, "MausSpots", titel, jsUrl, 0, "", "");
                 }
-            } catch (Exception ex)
+            }
+            catch (final Exception ex)
             {
                 Log.errorLog(915263698, ex);
             }
