@@ -19,6 +19,23 @@
  */
 package mServer.crawler.sender;
 
+import java.net.MalformedURLException;
+import java.net.URL;
+import java.time.Duration;
+import java.time.temporal.ChronoUnit;
+import java.util.ArrayList;
+import java.util.Collection;
+import java.util.UUID;
+import java.util.concurrent.ExecutorService;
+import java.util.concurrent.ForkJoinPool;
+import java.util.concurrent.Phaser;
+import java.util.concurrent.RecursiveAction;
+import java.util.concurrent.TimeUnit;
+
+import org.apache.commons.lang3.StringUtils;
+import org.apache.logging.log4j.LogManager;
+import org.apache.logging.log4j.Logger;
+
 import de.mediathekview.mlib.Config;
 import de.mediathekview.mlib.daten.Film;
 import de.mediathekview.mlib.daten.GeoLocations;
@@ -34,18 +51,6 @@ import mServer.crawler.sender.zdf.DownloadDTO;
 import mServer.crawler.sender.zdf.VideoDTO;
 import mServer.crawler.sender.zdf.ZDFSearchTask;
 import mServer.tool.MserverDatumZeit;
-import org.apache.commons.lang3.StringUtils;
-import org.apache.logging.log4j.LogManager;
-import org.apache.logging.log4j.Logger;
-
-import java.net.URI;
-import java.net.URISyntaxException;
-import java.time.Duration;
-import java.time.temporal.ChronoUnit;
-import java.util.ArrayList;
-import java.util.Collection;
-import java.util.UUID;
-import java.util.concurrent.*;
 
 public class MediathekZdf extends MediathekReader
 {
@@ -53,7 +58,7 @@ public class MediathekZdf extends MediathekReader
     public final static Sender SENDER = Sender.ZDF;
     private ForkJoinPool forkJoinPool;
 
-    public MediathekZdf(FilmeSuchen ssearch, int startPrio)
+    public MediathekZdf(final FilmeSuchen ssearch, final int startPrio)
     {
         super(ssearch, SENDER.getName(), 0 /* threads */, 150 /* urlWarten */, startPrio);
         setName("MediathekZdf");
@@ -67,22 +72,21 @@ public class MediathekZdf extends MediathekReader
         meldungStart();
         meldungAddThread();
 
-        int days = CrawlerTool.loadLongMax() ? 300 : 20;
+        final int days = CrawlerTool.loadLongMax() ? 300 : 20;
 
         final ZDFSearchTask newTask = new ZDFSearchTask(days);
         forkJoinPool = new ForkJoinPool(Runtime.getRuntime().availableProcessors() * 4);
         forkJoinPool.execute(newTask);
-        Collection<VideoDTO> filmList = newTask.join();
+        final Collection<VideoDTO> filmList = newTask.join();
 
-        EtmPoint perfPoint = EtmManager.getEtmMonitor().createPoint("MediathekZdf.convertVideoDTO");
+        final EtmPoint perfPoint = EtmManager.getEtmMonitor().createPoint("MediathekZdf.convertVideoDTO");
 
         if (!filmList.isEmpty())
         {
             // Convert new DTO to old DatenFilm class
             Log.sysLog("convert VideoDTO to DatenFilm started...");
-            filmList.parallelStream().forEach((video) ->
-            {
-                VideoDtoDatenFilmConverterAction action = new VideoDtoDatenFilmConverterAction(video);
+            filmList.parallelStream().forEach((video) -> {
+                final VideoDtoDatenFilmConverterAction action = new VideoDtoDatenFilmConverterAction(video);
                 forkJoinPool.execute(action);
             });
 
@@ -99,23 +103,26 @@ public class MediathekZdf extends MediathekReader
                     wasInterrupted = true;
                     phaser.forceTermination();
                     shutdownAndAwaitTermination(forkJoinPool, 5, TimeUnit.SECONDS);
-                } else
+                }
+                else
                 {
                     TimeUnit.SECONDS.sleep(1);
                 }
-            } catch (InterruptedException ignored)
+            }
+            catch (final InterruptedException ignored)
             {
             }
         }
 
-        //explicitely shutdown the pool
+        // explicitely shutdown the pool
         shutdownAndAwaitTermination(forkJoinPool, 60, TimeUnit.SECONDS);
 
         perfPoint.collect();
         if (wasInterrupted)
         {
             Log.sysLog("VideoDTO conversion interrupted.");
-        } else
+        }
+        else
         {
             Log.sysLog("convert VideoDTO to DatenFilm finished.");
         }
@@ -123,7 +130,7 @@ public class MediathekZdf extends MediathekReader
         meldungThreadUndFertig();
     }
 
-    void shutdownAndAwaitTermination(ExecutorService pool, long delay, TimeUnit delayUnit)
+    void shutdownAndAwaitTermination(final ExecutorService pool, final long delay, final TimeUnit delayUnit)
     {
         pool.shutdown();
         try
@@ -136,7 +143,8 @@ public class MediathekZdf extends MediathekReader
                     Log.sysLog("Pool did not terminate");
                 }
             }
-        } catch (InterruptedException ie)
+        }
+        catch (final InterruptedException ie)
         {
             pool.shutdownNow();
             Thread.currentThread().interrupt();
@@ -149,7 +157,7 @@ public class MediathekZdf extends MediathekReader
 
         private final VideoDTO video;
 
-        public VideoDtoDatenFilmConverterAction(VideoDTO aVideoDTO)
+        public VideoDtoDatenFilmConverterAction(final VideoDTO aVideoDTO)
         {
             video = aVideoDTO;
             phaser.register();
@@ -162,20 +170,14 @@ public class MediathekZdf extends MediathekReader
             {
                 try
                 {
-                    DownloadDTO download = video.getDownloadDto();
+                    final DownloadDTO download = video.getDownloadDto();
 
-                    Collection<GeoLocations> geoLocations = new ArrayList<>();
+                    final Collection<GeoLocations> geoLocations = new ArrayList<>();
                     geoLocations.add(download.getGeoLocation());
 
-                    Film film = new Film(UUID.randomUUID(),
-                            geoLocations,
-                            SENDER,
-                            video.getTitle(),
-                            video.getTopic(),
-                            MserverDatumZeit.parseDateTime(video.getDate(),
-                                    video.getTime()),
-                            Duration.of(video.getDuration(), ChronoUnit.SECONDS),
-                            new URI(video.getWebsiteUrl()));
+                    final Film film = new Film(UUID.randomUUID(), geoLocations, SENDER, video.getTitle(),
+                            video.getTopic(), MserverDatumZeit.parseDateTime(video.getDate(), video.getTime()),
+                            Duration.of(video.getDuration(), ChronoUnit.SECONDS), new URL(video.getWebsiteUrl()));
 
                     if (StringUtils.isNotBlank(video.getDescription()))
                     {
@@ -192,25 +194,27 @@ public class MediathekZdf extends MediathekReader
 
                     if (StringUtils.isNotBlank(download.getSubTitleUrl()))
                     {
-                        film.addSubtitle(new URI(download.getSubTitleUrl()));
+                        film.addSubtitle(new URL(download.getSubTitleUrl()));
                     }
 
                     try
                     {
                         CrawlerTool.improveAufloesung(film);
-                    } catch (URISyntaxException uriSyntaxEception)
+                    }
+                    catch (final MalformedURLException malformedURLException)
                     {
-                        LOG.error("Beim verbessern der Auflösung ist ein Fehler aufgetreten", uriSyntaxEception);
+                        LOG.error("Beim verbessern der Auflösung ist ein Fehler aufgetreten", malformedURLException);
                     }
 
-                    //don´t use addFilm here
+                    // don´t use addFilm here
                     if (mlibFilmeSuchen.listeFilmeNeu.addFilmVomSender(film))
                     {
                         // dann ist er neu
                         FilmeSuchen.listeSenderLaufen.inc(film.getSender().getName(), RunSender.Count.FILME);
                     }
 
-                } catch (Exception ex)
+                }
+                catch (final Exception ex)
                 {
                     Log.errorLog(496583211, ex, "add film failed: " + video.getWebsiteUrl());
                 }
@@ -218,6 +222,5 @@ public class MediathekZdf extends MediathekReader
             phaser.arriveAndDeregister();
         }
     }
-
 
 }
